# diplomrabota

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test_google.py  test_openai.py  trace  voice_assistant.db
alembic/versions/: 001_initial_schema.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx  page.tsx
app/login/: page.tsx
components/: ConfirmationScreen.tsx  ResponsePlayer.tsx  VoiceButton.tsx
hooks/: useAudioRecorder.ts
server/: server-reference-manifest.js  server-reference-manifest.json
server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-symbols.js  has-tostringtag.js  hasown.js  lucide-react.js  math-intrinsics.js  mime-db.js  mime-types.js  next.js
services/: api.ts
src/: __init__.py  config.py
src/adapters/: __init__.py
src/api/: auth.py  main.py  schemas.py
src/models/: __init__.py  database.py  entities.py  entities_ext.py
src/services/: __init__.py  analytics.py  audit.py  comparison.py  metrics.py  normalization.py  retention.py  storage.py  voice_session.py
tests/: test_comparison.py  test_integration.py
tests/adapters/: __init__.py  test_stt_adapters.py
tests/api/: __init__.py  test_admin_api.py  test_api_contracts.py
tests/services/: __init__.py  test_analytics.py  test_audit_security.py  test_normalization.py  (+1 more)
(+19 files in other folders)
